Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16460

fix lnetctl command line option bugs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • Any LNet setup.
    • 3
    • 9223372036854775807

      While moving LNet to netlink in my testing of different lnetctl command options bugs were exposed. Some of the bugs are:

      1) A double free in the kernel when settting up a LNet NI for an interface that doesn' exis.t

      2) NI tunables not being properly set.

      3) A memory leak when registering a LNet NI twice.

      4) Better range handling of user input and less strict failing for bad parameters.

            simmonsja James A Simmons
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: